<resources>
    <string name="app_name">삼행시</string>
    <string name="all_ok">확인</string>
    <string name="all_cancel">취소</string>
    <string name="all_err">오류가 발생했습니다. 다시 시도해주세요!</string>
    <string name="all_rank_err">순위 조회 중 오류가 발생했습니다. 다시 시도해주세요!</string>
    <string name="all_user">님</string>
    <string name="all_exit">\'뒤로\' 버튼을 한번 더 누르면 종료됩니다.</string>

    <string name="login_finish">입장하기 →</string>
    <string name="login_input_name">닉네임을 입력해주세요.</string>
    <string name="login_already_used">이미 사용중인 닉네임입니다!</string>
    <string name="login_success">로그인 성공! 환영합니다.</string>
    <string name="title_name">로그인</string>

    <string name="main_latest">최신순</string>
    <string name="main_favorite">인기순</string>
    <string name="main_my_poem">내 삼행시</string>
    <string name="main_start">시작하자</string>
    <string name="main_no_item">아직 삼행시가 없습니다!</string>
    <string name="main_rank1">1위!</string>
    <string name="main_rank2">2위!</string>
    <string name="main_rank3">3위!</string>

    <string name="game_submit">제출하자</string>
    <string name="game_ready1">준</string>
    <string name="game_ready2">비</string>
    <string name="game_ready3">중</string>
    <string name="game_input">입력!</string>
    <string name="game_not_input">비어있는 행이 있어요!</string>
    <string name="game_finish">삼행시 제출 완료!</string>
    <string name="game_back">아직 삼행시 작성이 진행 중이예요. 종료하시겠어요?</string>
</resources>
