<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="14dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_main_latest"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/back_fill_red"
        android:elevation="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="7dp"
        android:text="@string/main_latest"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_main_favorite"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/back_stoke_green2"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="7dp"
        android:text="@string/main_favorite"
        android:textColor="@color/colorDarkerGray" />

    <Button
        android:id="@+id/btn_main_mine"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/back_stoke_green2"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="7dp"
        android:text="@string/main_my_poem"
        android:textColor="@color/colorDarkerGray" />

</LinearLayout>