<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.MainActivity">

    <ImageView
        android:layout_width="347dp"
        android:layout_height="365dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/back_main" />

    <TextView
        android:id="@+id/tv_main_no_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/main_no_item"
        android:textSize="18sp"
        android:visibility="gone" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="50dp"
            android:id="@+id/rv_main_poem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:horizontalSpacing="4dp"
            android:overScrollMode="never"
            android:verticalSpacing="6dp"
            app:layoutManager="android.support.v7.widget.GridLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:spanCount="2" />


        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_main_latest"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/back_fill_red"
                android:elevation="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="7dp"
                android:text="@string/main_latest"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_main_favorite"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/back_stoke_green2"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="7dp"
                android:text="@string/main_favorite"
                android:textColor="@color/colorDarkerGray" />

            <Button
                android:id="@+id/btn_main_mine"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/back_stoke_green2"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="7dp"
                android:text="@string/main_my_poem"
                android:textColor="@color/colorDarkerGray" />
        </LinearLayout>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <include
                    layout="@layout/header_main"
                    app:layout_collapseMode="parallax" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fb_main_start"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="16dp"
            android:text="@string/main_start"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />
</FrameLayout>