<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ib_main_1st"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_rank_2nd" />

                    <ImageButton
                        android:id="@+id/ib_main_2nd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_rank_1st_select" />

                    <ImageButton
                        android:id="@+id/ib_main_3rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_rank_3rd" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_main_rank_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="영걸님"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="107dp"
                        android:layout_height="69dp"
                        android:layout_gravity="bottom"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_main_boy" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_heart"
                        android:gravity="center"
                        android:minHeight="0dp"
                        android:paddingStart="30dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:text="100"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/back_stoke_green" />

                    <include layout="@layout/layout_main_rank_poem" />

                    <View
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="end|bottom"
                        android:layout_margin="6dp"
                        android:background="@drawable/rect_stroke_white" />
                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="17dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:orientation="horizontal"
                android:paddingBottom="14dp">

                <Button
                    android:id="@+id/btn_main_latest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/back_fill_red"
                    android:elevation="0dp"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="7dp"
                    android:text="@string/main_latest"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_main_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/back_stoke_green2"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="7dp"
                    android:text="@string/main_favorite"
                    android:textColor="@color/colorDarkerGray" />

                <Button
                    android:id="@+id/btn_main_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/back_stoke_green2"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="7dp"
                    android:text="@string/main_my_poem"
                    android:textColor="@color/colorDarkerGray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>